# HPCSeriesCore

./: .dockerignore  .gitignore  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  Dockerfile  Dockerfile.gpu  Dockerfile.python  HPCSeries Core v0.6 Spec — SIMD Vectorization & Microarchitecture Opt  LICENSE  MANIFEST.in  NOTICE  PYTHON_BUILD_QUICKSTART.md  README.md  V07_PYTHON_BINDINGS_INFRASTRUCTURE.md  docker-build-gpu.sh  docker-build.sh  docker-compose.python.yml  docker-compose.yml  docker-entrypoint.sh  hpcs_core.pc.in  pyproject.toml  requirements.txt  setup.py  test_clip_optimization.py
.claude/: settings.local.json
.github/: PYPI_ACTIVATION_GUIDE.md  PYPI_PUBLICATION_GUIDE.md  PYPI_QUICK_START.sh  RE-RELEASE_GUIDE.md  RELEASE_CHECKLIST_v0.7.0.md  RELEASE_CHECKLIST_v0.8.0.md  RELEASE_READINESS_REPORT.md  RELEASE_TEMPLATE.md  RELEASE_TEMPLATE_v0.7.0.md  RELEASE_TEMPLATE_v0.8.0.md  TRUSTED_PUBLISHING_SETUP.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-wheels.yml  ci.yml  publish-to-pypi.yml  publish-to-test-pypi.yml
bench/: bench_core.cpp  bench_gpu_acceleration.cpp  bench_v03.cpp  python_benchmark.py
bench/cpp/: bench_gpu_acceleration.cpp  bench_v03.cpp  bench_v03_optimized.cpp
bench/python/: benchmark_phase2_modes.py  benchmark_reductions_modes_v08.py  benchmark_v08.py
benchmark_results_v04/: results_1threads.csv  results_2threads.csv  results_4threads.csv  results_8threads.csv
cmake/: hpcs_coreConfig.cmake.in
docs/: AWS_DEPLOYMENT_GUIDE.md  PERFORMANCE.md  PERFORMANCE_SUMMARY.md  READTHEDOCS_SETUP.md  requirements.txt
docs/source/: changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst
docs/source/api/: index.rst
docs/source/notebooks/: index.rst
docs/source/user_guide/: architecture.rst  index.rst  migration.rst  performance.rst
examples/cpp/: CMakeLists.txt
include/: hpc_series.h  hpcs_core.h
logs/: README.md
logs/reports/: performance_report_20251122.md
notebooks/: 00_getting_started.ipynb  01_rolling_mean_vs_median.ipynb  02_robust_anomaly_climate.ipynb  03_batched_iot_rolling.ipynb  04_axis_reductions_column_stats.ipynb  05_masked_missing_data.ipynb  06_performance_calibration.ipynb  07_c_optimized_operations.ipynb  08_numpy_pandas_migration_guide.ipynb  09_real_world_applications.ipynb  10_exponential_weighted_statistics.ipynb  11_pipeline_api.ipynb  HPCSeries_Kaggle_StoreSales_v1.ipynb  HPCSeries_Kaggle_StoreSales_v2.ipynb  README.md
notebooks/data/: climate_daily_temp.csv  climate_pm25_timeseries.csv  environmental_sensors_missing.csv  financial_market_data.csv  iot_sensors_multiseries.csv
notebooks/submissions/: hpcs_kaggle_store_sales_v2_log_metadata.json  hpcs_kaggle_store_sales_v2_metadata.json
python/hpcs/: __init__.py  _core.pyx  _docstubs.py  _simd.pyx  cli.py
scripts/: compare_benchmarks.py  run_benchmarks.sh
src/: hpcs_calibrate.c  hpcs_cpu_detect.c  hpcs_reduce_simd.c  hpcs_rolling_simd.c  hpcs_simd_dispatch.c  hpcs_zscore_simd.c
src/c/: hpcs_plan.c  hpcs_rolling_simd.c  hpcs_simd_dispatch.c  hpcs_version.c  hpcs_workspace.c
src/cpp/: hpcs_convolution.cpp  hpcs_robust_stats.cpp  hpcs_selection.cpp
src/fortran/: hpcs_constants.f90  hpcs_core_1d.f90  hpcs_core_accel.f90  hpcs_core_anomaly.f90  hpcs_core_batched.f90  hpcs_core_execution_mode.f90  hpcs_core_masked.f90  hpcs_core_parallel.f90  hpcs_core_quality.f90  hpcs_core_reductions.f90  hpcs_core_rolling.f90  hpcs_core_stats.f90  hpcs_core_stats_parallel.f90  hpcs_core_transforms.f90  hpcs_core_utils.f90  hpcs_cpu_detect.f90
tests/: README.md  pytest.ini  run_all_tests.sh  test_core_c.c  test_core_cpp.cpp  test_fill_debug.c  test_openmp.c  test_phase1.c  test_phase2.c  test_phase3.c  test_phase4.c  test_phase4_1_quick.py  test_phase4_all.py  test_phase4_memory.c  test_phase5.c  test_phase6.c  test_v03.c  test_v03_debug.c  verify_phase3.py
tests/c/: Makefile  test_execution_modes  test_reductions_modes  test_transforms_v08
tests/cpp/: test_hpcs_baseline  test_output.txt
tests/fortran/: Makefile
tests/python/: test_execution_modes_v08.py  test_phase2_modes.py  test_reductions.py  test_reductions_modes_v08.py  test_transforms_v08.py
